# frabjous2

./: .gitignore  .project  LICENSE  README.md  frabjous.cabal  ioprac.hs  learning.smultronProject
LaTeX/: Makefile  prog.c  test.aux  test.bib  test.blg  test.out  test.pdf.backup  test.tex
LaTeX/SBP-2014/: Makefile  frabjous.aux  frabjous.bbl  frabjous.blg  frabjous.dvi  frabjous.tex  my-macros.sty  refs.bib
LaTeX/paper/: Makefile  frabjous.ps  frabjous_ihi.aux  frabjous_ihi.bbl  frabjous_ihi.blg  frabjous_ihi.dvi  frabjous_ihi.tex  refs.bib  refs.blg  sig-alternate.tex
LaTeX/paper/Frabjous_HighLevelSystem.graffle/: data.plist
LaTeX/paper/Frabjous_HighLevelSystem.graffle/QuickLook/: Thumbnail.tiff
LaTeX/paper/pics/: model_diagram.graffle  neighbourhoods.graffle
LaTeX/paper/pics/.svn/: entries
LaTeX/paper/pics/.svn/text-base/: sir.png.svn-base
LaTeX/paper/pics/sir.graffle/: data.plist
LaTeX/paper/pics/sir.graffle/QuickLook/: Thumbnail.tiff
LaTeX/paper/src/: frabjous_semantics.rtf  sir.frabjous
LaTeX/paper/src/.svn/: entries
LaTeX/paper/src/.svn/text-base/: main.cc.svn-base
accelerate/: GameOfLife.hs  Main.hs  Model.hs  automata.hs  gol.hs
compiler/: Analyzer.hs  CodeGen.hs  Compiler.hs  Frabjous.hs  InternalLibrary.hs  Makefile  Parser.hs  StandardLibrary.hs  Syntax.hs  Transform.hs  bottom  gol.fj  mobility.fj  newmodel.hs  output1  thim.fj  top  ui
dice_text/: DiceRoller  DiceRoller.hi  DiceRoller.hs  OliDice.hi  OliDice.hs
doc/Frabjous - CMPT400/: frabjous-reference.aux  frabjous-reference.bbl  frabjous-reference.blg  frabjous-reference.out  frabjous-reference.tex  frabjous-reference.toc  frabjous.aux  frabjous_full.aux  frabjous_full.tex
doc/LaTeX/SBP-2014/SBP-2014-Frabjous/: frabjous.tex  refs.bib
doc/LaTeX/SBP-2014/full/: frabjous.aux  frabjous.bbl  frabjous.blg  frabjous.dvi
eclipse/THIM/: .project
eclipse/THIM/src/main/: Distribution.scala  EventQueue.scala  Model.scala  ModelEvent.scala  Neighborhood.scala  Sim.scala  Util.scala
gui_test/: gui.hi  gui.hs  gui.hs copy  makefile
gui_test/gui.app/Contents/: Info.plist
netwire/: Compiler  Compiler.hs  Frabjous.hs  Makefile  bottom  networkTest.hs  sir.hs  test.hs  thim.fj  thim.hs  top
parsing/: ab.hs  csv_example.hs  csv_example2.hs  csv_example3.hs  expr.hs
src/: GUI.hs  Reactive.hs  Syntax.hs
src/Frabjous/: StdLib.hs
src/Frabjous/Compiler/: CodeGen.hs  Main.hs  Parser.hs  Syntax.hs  Transform.hs
src/Frabjous/StdLib/: Internal.hs
template/: bar.hs  foo.hs
test/: StandardLibrary.hs  bottom  compile  top  ui
test/frabjous-src/: gol.fj  sir.fj
ui/: Main.scala
ui/src/ui/: Main.scala
yampa/: Frabjous.hs  LotkaVolterra.hs  Makefile  Warehouse.hs  esrd.frabjous  esrd_tb.hs  foo  frabTest.hs  frabjous.hs  game_of_life.hs  movingBall.hs  orbit.hs  prisonGUI.hs  sir.out  tbGUI.hs  term.worksheet  test.frabjous  test.out.txt  timescale.hs  waitUntil.hs  wareGUI.hs  yampa_test.hs
yampa/.svn/: entries
yampa/.svn/text-base/: Traffic.hs.svn-base  acc_test.hs.svn-base  fish.hs.svn-base  fruit.hs.svn-base  game_of_life.hs.svn-base  movingBall.hs.svn-base  multi.hs.svn-base  prisoner.hs.svn-base  rGui.hs.svn-base  reactimate.hs.svn-base  sir.hs.svn-base  wolf.hs.svn-base
yampa/Frabjous/: Base.hs  Compiler.hs
yampa/Frabjous/.svn/: entries
yampa/Frabjous/.svn/text-base/: Compiler.hs.svn-base  Parser.hs.svn-base
