name:                frabjous
version:             0.1.0.0
synopsis:            A compiler for Frabjous, a domain-specific language for agent-based modelling based on FRP.
-- description:         
license:             MIT
license-file:        LICENSE
author:              Ivan Vendrov
maintainer:          ivendrov@gmail.com
-- copyright:           
category:            Language
cabal-version:       >=1.10
build-type:          Custom


executable frabjousc
  main-is:             Frabjous/Compiler/Main.hs           
  other-modules:       Frabjous.Compiler.Transform, 
                       Frabjous.Compiler.Syntax, 
                       Frabjous.Compiler.Parser, 
                       Frabjous.Compiler.CodeGen
  other-extensions:    NamedFieldPuns, RecordWildCards, OverloadedStrings, TemplateHaskell, TypeOperators, DeriveDataTypeable, ScopedTypeVariables, NoMonomorphismRestriction, TypeSynonymInstances, FlexibleInstances, MultiParamTypeClasses
  build-depends:       base >=4.7 && <4.8, containers >=0.5 && <0.6, MonadRandom >=0.1 && <0.2, mtl >=2.0 && <2.3, netwire >=4.0 && <4.1, fclabels >=2.0 && <3, parsec >=3.0 && <4, haskell-src-exts >=1.15 && <1.16, syb >=0.4 && <0.5
  hs-source-dirs:      src    
  default-language:    Haskell2010
  ghc-options:        -W

library 
  Build-Depends:      
                      base >=4.7 && <4.8,
                      containers >=0.5 && <0.6,
                      MonadRandom >=0.1 && <0.2,
                      mtl >=2.0 && <2.3,
                      netwire >=4.0 && <4.1,
                      fclabels >=2.0 && <2.1,
                      parsec >=3.1.5 && <3.2,
                      haskell-src-exts >=1.15 && <1.16,
                      syb >=0.4 && <0.5
  Exposed-modules:    
                      Frabjous.Compiler.Syntax,
                      Frabjous.StdLib,
                      Frabjous.StdLib.Internal
  hs-source-dirs:     src
  default-language:    Haskell2010
  ghc-options:        
                      Frabjous.Compiler.Main,
                      Frabjous.Compiler.Parser
  other-modules:      
                      Frabjous.Compiler.CodeGen,
                      Frabjous.Compiler.Main,
                      Frabjous.Compiler.Parser,
                      Frabjous.Compiler.Transform
